
	Skolnick:
		* Added the time to the aMule stats in the wxCas window and
		  in the generated image.
		* Added the time to the aMule stats in the cas output and
		  in the generated image
		* Added option to generate image in JPG format (along with PNG)
		* Added new icon for aMule

	Stu Redman:
		* Fix for Transferred / Completed not updated in remote GUI.

	Trevino:
		* Fix for "Both the Unknown client icon and the Unknown status
		icon points to the same file" issue.
		* Skin support with relative paths.

	visualage:
		* Fix for aMuleWeb unicode search/download link error.
		* Fix for aMuleWeb segfault when refreshing too frequently.

	Vollstrecker:
		* Added possibility to give the path for output right with
		  -p or -o in cas.
		* Changed cas to use getopt_long.
		* Added --config-dir and -c option to cas.
		* Added alias -H --html to cas.
		* Added alias -P --picture to cas.
		* Added --config-dir and -c option to ed2k.
		* Added --config-dir option to amuled.
		* Fixed typos in the man pages.
		* Added manpage for amulegui.
		* Added amulegui desktop icon (with Gerd78).
		* Manpages update.
		* Add debian folder.
		* Correct use of libcrypto >= 5.5 and update of debian-dir.

	wuischke:
		* Add emulecollection support on aMule ED2K Links Handler
		* Fix online signature update rate
		* Fix display of filesize > 4GB in file detail dialog
		* Fix toolbar import/about icon order
		* Add option to load emulecollection in SharedFilesCtrl
		* Add oga and ogv extension for file type search
		* Allow skin/webserver template section via wxchoice + skin enhancement
		* Some error messages rephrased, to improve readability
		* Fix idle mode for UBT
		* Fix Ctrl+a in MuleListCtrl
		* Replace (f)lex by $(LEX) in Makefile.am files
		* Fix libUPnP unloading.
		* Fix building with external CryptoPP
		* Ship skins with tarball
		* Display file size in human readable format in FileDetailDialog
		* Added upload feedback
		* Added option to enable EC and set pass in A[amuled]